Image dimensions now show up in title with or without IMG2. b=57549 r=pavlov sr=waterson a=blizzard